--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "alibabacloud/tea-oss-utils",
+    "name": "zdx0823/tea-oss-utils",
     "description": "Alibaba Cloud Tea OSS Utils Library for PHP",
     "type": "library",
     "license": "Apache-2.0",
